[gd_scene load_steps=23 format=1]

[ext_resource path="res://menuPrincipal/gfx/iconos/icon_godot.png" type="Texture" id=1]
[ext_resource path="res://menuPrincipal/gfx/iconos/icon_EHSJ.jpg" type="Texture" id=2]
[ext_resource path="res://menuPrincipal/gfx/iconos/icon_godotFail.png" type="Texture" id=3]
[ext_resource path="res://menuPrincipal/scripts/MenuPrograma.tres.gd" type="Script" id=4]
[ext_resource path="res://fuentes/HelveticaNeue-Roman22.fnt" type="BitmapFont" id=5]
[ext_resource path="res://menuPrincipal/scripts/PopAcercaDe.tres.gd" type="Script" id=6]
[ext_resource path="res://menuPrincipal/gfx/iconos/icon_EHSJFail.png" type="Texture" id=7]
[ext_resource path="res://menuPrincipal/gfx/iconos/icon_script.png" type="Texture" id=8]
[ext_resource path="res://menuPrincipal/gfx/iconos/icon_scriptFail.png" type="Texture" id=9]
[ext_resource path="res://menuPrincipal/gfx/iconos/icon_iface.png" type="Texture" id=10]
[ext_resource path="res://menuPrincipal/gfx/iconos/icon_ifaceFail.png" type="Texture" id=11]
[ext_resource path="res://menuPrincipal/gfx/iconos/icon_Node2D.png" type="Texture" id=12]
[ext_resource path="res://menuPrincipal/gfx/iconos/icon_Node2DFail.png" type="Texture" id=13]
[ext_resource path="res://fuentes/HelveticaNeue-Roman14.fnt" type="BitmapFont" id=14]
[ext_resource path="res://menuPrincipal/panelFoto/PanelFoto.tscn" type="PackedScene" id=15]
[ext_resource path="res://menuPrincipal/scripts/PopRendimiento.tres.gd" type="Script" id=16]
[ext_resource path="res://estilos/cyanVVS.tres" type="StyleBox" id=17]
[ext_resource path="res://estilos/naranjaSombra.tres" type="StyleBox" id=18]
[ext_resource path="res://menuPrincipal/gfx/iconos/icon_salir.png" type="Texture" id=19]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0, 0, 0, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="Animation" id=2]

length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Info/Titulo:percent_visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 2 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("imgAutor:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0.5, 1.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("imgParallax:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 1, 2 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("imgTileYParallax:visibility/opacity")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 1, 2 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("imgParticulas:visibility/opacity")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 1.5, 2.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("imgNaves:visibility/opacity")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 2, 3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("imgMultiRes:visibility/opacity")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": FloatArray( 1.5, 2.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("imgInterfaz:visibility/opacity")
tracks/7/interp = 1
tracks/7/imported = false
tracks/7/keys = {
"times": FloatArray( 0.5, 1.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("imgSprite:visibility/opacity")
tracks/8/interp = 1
tracks/8/imported = false
tracks/8/keys = {
"times": FloatArray( 0.5, 1.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="StyleBoxFlat" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.148438, 1, 0, 0.501961 )
light_color = Color( 0, 0, 0, 0 )
dark_color = Color( 0, 0, 0, 0 )
border_size = 8
border_blend = false
draw_bg = true

[node name="MenuPrincipal" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="referencia" type="Control" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 5.0
margin/top = 5.0
margin/right = 5.0
margin/bottom = 5.0
__meta__ = {
"_edit_lock_": true
}

[node name="PanelFondo" type="Panel" parent="referencia"]

visibility/opacity = 0.2
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="PanelMenu" type="Panel" parent="referencia"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 25.0
__meta__ = {
"_edit_lock_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="referencia/PanelMenu"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 0.0
margin/right = 10.0
margin/bottom = 0.0
alignment = 0
__meta__ = {
"_edit_lock_": true
}

[node name="HSeparator" type="HSeparator" parent="referencia/PanelMenu/HBoxContainer"]

visibility/opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1662.0
margin/bottom = 25.0

[node name="Presentacion" type="Button" parent="referencia/PanelMenu/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1666.0
margin/top = 0.0
margin/right = 1835.0
margin/bottom = 25.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Presentación del Trabajo"
flat = true

[node name="Programa" type="MenuButton" parent="referencia/PanelMenu/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1839.0
margin/top = 0.0
margin/right = 1930.0
margin/bottom = 25.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 0
shortcut = null
text = "Programa"
icon = ExtResource( 1 )
flat = true
align = 0
items = [ "Acerca de..", ExtResource( 2 ), false, false, false, 0, 0, null, "", false, "Rendimiento", ExtResource( 1 ), false, false, false, 1, 0, null, "", false, "", null, false, false, false, 2, 0, null, "", true, "Salir", ExtResource( 3 ), false, false, false, 3, 0, null, "", false ]
script/script = ExtResource( 4 )
popupPath = NodePath("../../../PopUps")

[node name="PopUps" type="Node" parent="referencia"]

[node name="Presentacion" type="WindowDialog" parent="referencia/PopUps"]

editor/display_folded = true
visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 50.0
margin/top = 100.0
margin/right = 50.0
margin/bottom = 50.0
popup/exclusive = false
window/title = "Introducción a Godot."

[node name="RichTextLabel" type="RichTextLabel" parent="referencia/PopUps/Presentacion"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 20.0
margin/right = 20.0
margin/bottom = 20.0
custom_fonts/normal_font = ExtResource( 5 )
bbcode/enabled = true
bbcode/bbcode = "
La obra se estructura en una parte teórica, consistente en ocho capítulos y tres anexos. Junto con un parte practica compuesta de cinco proyectos en Godot.
El primer capítulo de la parte teórica contiene el propósito, objetivos y descripción del proyecto.

En el segundo se describe la tecnología, su historia y características generales, su naturaleza interpretada y se presentan algunos proyectos, comerciales y aficionados, realizados con ella.
Finaliza explicando los pasos a seguir desde la descarga hasta tener nuestro primer proyecto “01 Hola Mundo\".

El tercero hace un repaso general por la interfaz del Editor, sus ajustes de configuración y los atajos de teclado. También se explican las principales propiedades del proyecto.
En el cuarto se presenta GDScript, el lenguaje principal de Godot. Será la guía de referencia para consultar la sintaxis o funcionalidades concretas.
Al final se explican las peculiaridades del tipado dinámico, que utilizaremos. Como ejemplo de uso de clases, en el Anexo 01, se tratará la declaración, instanciación y operación de una clase auxiliar, para el tratamiento de longitudes.
En el quinto entraremos en los conceptos del funcionamiento interno y los recursos que pone el motor a nuestra disposición para ahorrarnos trabajo.
A los conceptos de nodo y escena les siguen el tratamiento de rutas a los recursos y el uso de señales y detección de entradas ya sean de teclado, ratón o dispositivos de juego, el concepto de árbol de escena y de BuclePrincipal.  Nuestros nodos colgaran de ese árbol y los scripts serán ejecutados atendiendo a las funciones virtuales que tengan implementados.
La gestión de capas (Canvas) y de puntos de vista también se tratará así como los diferentes sistemas de referencia para las coordenadas. La adaptación de nuestro programa a las diferentes resoluciones de pantalla también se tratan en este capítulo.
Puedes ampliar los conocimientos sobre este tema en el Anexo 02, con capturas de pantalla para los diferentes ajustes relacionados con la resolución de juego.
El sexto está dedicado al desglose y utilización de los diferentes Nodos que tenemos a nuestra disposición. Empezando por la clase Control, para la interfaz de usuario, donde se tratan los botones y textos, así como su alineación y anclaje en un marco flexible.
Seguiremos con la clase Node2D responsable de la mayoría del contenido de nuestro proyecto, como los Sprites, sistemas de partículas y elementos del motor de físicas. El tercer proyecto de ejemplo “03 Ejemplos Varios” contiene las escenas a las que hace referencia este capítulo.
El séptimo abordará algunos aspectos de los dos proyectos de ejemplo con temática espacial. Un sencillo, “04B Matamarcianos DAM” que fue objetivo de una tarea en la asignatura de Programación Multimedia y Dispositivos Móviles. Y un remake del juego SpaceWar!, al que hemos denominado “04 Guerra Espacial” .
Se ha elegido este último por la idoneidad para implementarlo con el motor de físicas de Godot y así poder ejemplificar las diferentes funciones que tiene. El motivo de incluir en este proyecto, un trabajo ya entregado, como es “Matamarcianos DAM”, no es otro que permitir al lector acceder a unas técnicas, como la reproducción de sonidos, creación de un menú principal, etc.. que no han podido ser incluidas en la presente obra por falta de tiempo, pues se ha priorizado añadir contenido nuevo.
El Anexo 03 contiene un listado de Software libre y de repositorios de recursos online.
"
visible_characters = -1
percent_visible = 1.0

[node name="AcercaDe" type="AcceptDialog" parent="referencia/PopUps"]

editor/display_folded = true
visibility/visible = false
anchor/left = 3
anchor/right = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 452.0
margin/top = 101.0
margin/right = -123.0
margin/bottom = 299.0
popup/exclusive = true
window/title = "Acerca de.."
dialog/hide_on_ok = true
script/script = ExtResource( 6 )

[node name="info" type="HBoxContainer" parent="referencia/PopUps/AcercaDe"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 2.0
margin/top = -20.0
margin/right = 42.0
margin/bottom = -4.0
alignment = 0

[node name="iconoVentana" type="TextureButton" parent="referencia/PopUps/AcercaDe/info"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 16.0
margin/bottom = 16.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 2 )
textures/pressed = ExtResource( 1 )
textures/hover = ExtResource( 7 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="jack_1" type="TextureButton" parent="referencia/PopUps/AcercaDe/info"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 0.0
margin/right = 36.0
margin/bottom = 16.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 8 )
textures/pressed = ExtResource( 9 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="jack_2" type="TextureButton" parent="referencia/PopUps/AcercaDe/info"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 0.0
margin/right = 56.0
margin/bottom = 16.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 10 )
textures/pressed = ExtResource( 11 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="jack_3" type="TextureButton" parent="referencia/PopUps/AcercaDe/info"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 60.0
margin/top = 0.0
margin/right = 76.0
margin/bottom = 16.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 12 )
textures/pressed = ExtResource( 13 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="jack_4" type="TextureButton" parent="referencia/PopUps/AcercaDe/info"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 80.0
margin/top = 0.0
margin/right = 96.0
margin/bottom = 16.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 1 )
textures/pressed = ExtResource( 3 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Info" type="Panel" parent="referencia/PopUps/AcercaDe"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 15.0
margin/top = 15.0
margin/right = 15.0
margin/bottom = 38.0

[node name="Titulo" type="RichTextLabel" parent="referencia/PopUps/AcercaDe/Info"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 5.0
margin/top = 5.0
margin/right = 5.0
margin/bottom = 5.0
custom_fonts/bold_font = ExtResource( 5 )
custom_fonts/normal_font = ExtResource( 14 )
bbcode/enabled = true
bbcode/bbcode = "[center][b]Introducción a Godot Engine.[/b] 

Proyecto de final del ciclo formativo 
Desarrollo de Aplicaciones Multiplataforma.

[url=https://github.com/EHSJ/InToGodot]github.com/EHSJ/InToGodot[/url]
Por el alumno [color=aqua]Eugenio Hugo Salgüero Jáñez[/color]
[color=green]Diciembre de[/color] [color=yellow]2017[/color].[/center]"
visible_characters = -1
percent_visible = 1.0

[node name="imgAutor" parent="referencia/PopUps/AcercaDe" instance=ExtResource( 15 )]

rect/rotation = -10.4613
margin/left = 585.0
margin/top = 47.0
margin/right = 728.0
margin/bottom = 207.0
fotoFile = "res://menuPrincipal/gfx/fotos/EHSJ.jpg"
titulo = "Autor"

[node name="imgInterfaz" parent="referencia/PopUps/AcercaDe" instance=ExtResource( 15 )]

rect/rotation = 7.14848
margin/left = -1.0
margin/top = 186.0
margin/right = 142.0
margin/bottom = 346.0
fotoFile = "res://menuPrincipal/gfx/fotos/CapturaControles.png"
titulo = "Interfaz"

[node name="imgSprite" parent="referencia/PopUps/AcercaDe" instance=ExtResource( 15 )]

rect/rotation = -15.3557
margin/left = 391.0
margin/top = 282.0
margin/right = 534.0
margin/bottom = 442.0
fotoFile = "res://menuPrincipal/gfx/fotos/CapturaSprite.png"
titulo = "Anim. de Sprites"

[node name="imgParallax" parent="referencia/PopUps/AcercaDe" instance=ExtResource( 15 )]

rect/rotation = 8.95997
margin/left = 261.0
margin/top = 203.0
margin/right = 404.0
margin/bottom = 363.0
fotoFile = "res://menuPrincipal/gfx/fotos/CapturaParallax.png"
titulo = "Fondo Parallax"

[node name="imgTileYParallax" parent="referencia/PopUps/AcercaDe" instance=ExtResource( 15 )]

rect/rotation = 13.7023
margin/left = 478.0
margin/top = 255.0
margin/right = 621.0
margin/bottom = 415.0
fotoFile = "res://menuPrincipal/gfx/fotos/CapturaNivel.png"
titulo = "TileMap + Parallax"

[node name="imgParticulas" parent="referencia/PopUps/AcercaDe" instance=ExtResource( 15 )]

rect/rotation = -7.64798
margin/left = 404.0
margin/top = 153.0
margin/right = 547.0
margin/bottom = 313.0
fotoFile = "res://menuPrincipal/gfx/fotos/CapturaParticulas.png"
titulo = "Particulas"

[node name="imgNaves" parent="referencia/PopUps/AcercaDe" instance=ExtResource( 15 )]

rect/rotation = -15.3557
margin/left = 651.0
margin/top = 176.0
margin/right = 794.0
margin/bottom = 336.0
fotoFile = "res://menuPrincipal/gfx/fotos/CapturaNaves.png"
titulo = "Proyecto Naves"

[node name="imgMultiRes" parent="referencia/PopUps/AcercaDe" instance=ExtResource( 15 )]

rect/rotation = -15.3557
margin/left = 156.0
margin/top = 160.0
margin/right = 299.0
margin/bottom = 320.0
fotoFile = "res://menuPrincipal/gfx/fotos/CapturaResoluciones.png"
titulo = "Multi-Resoluciones"

[node name="AnimationPlayer" type="AnimationPlayer" parent="referencia/PopUps/AcercaDe"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/AparecerTexto = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Rendimiento" type="AcceptDialog" parent="referencia/PopUps"]

editor/display_folded = true
visibility/visible = false
anchor/left = 3
anchor/right = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 200.0
margin/top = 100.0
margin/right = -200.0
margin/bottom = 379.0
popup/exclusive = false
window/title = "Rendimiento"
dialog/hide_on_ok = true
script/script = ExtResource( 16 )
rate = 0.5

[node name="Panel" type="Panel" parent="referencia/PopUps/Rendimiento"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 3.0
margin/top = 3.0
margin/right = 3.0
margin/bottom = 40.0
custom_styles/panel = ExtResource( 17 )

[node name="ProgressBar" type="ProgressBar" parent="referencia/PopUps/Rendimiento/Panel"]

editor/display_folded = true
anchor/right = 1
hint/tooltip = "Cantidad de imágenes procesadas por segundo."
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 10.0
margin/right = 10.0
margin/bottom = 50.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = ExtResource( 18 )
range/min = 0.0
range/max = 1000.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
percent/visible = false

[node name="fpsLabel" type="Label" parent="referencia/PopUps/Rendimiento/Panel/ProgressBar"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_fonts/font = ExtResource( 5 )
text = "60 fps"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SliderFps" type="HSlider" parent="referencia/PopUps/Rendimiento/Panel"]

anchor/right = 1
hint/tooltip = "Objetivo de cuadros por segundo."
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 79.0
margin/right = 80.0
margin/bottom = 95.0
range/min = 10.0
range/max = 1500.0
range/step = 10.0
range/page = 0.0
range/value = 60.0
range/exp_edit = false
range/rounded = false
tick_count = 50
ticks_on_borders = true
focus_mode = 2

[node name="CheckEco" type="CheckButton" parent="referencia/PopUps/Rendimiento/Panel"]

anchor/right = 1
hint/tooltip = "Establece si el motor actualizará la patalla solo cuando algo cambie o si, por el contrario, lo hace en cada frame."
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 15.0
margin/top = 103.0
margin/right = 15.0
margin/bottom = 128.0
custom_fonts/font = ExtResource( 14 )
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
text = "Modo Economizador"
flat = false
align = 0

[node name="CheckVsync" type="CheckButton" parent="referencia/PopUps/Rendimiento/Panel"]

anchor/right = 1
hint/tooltip = "Sincroniza el número de imágenes por segundo, con la tasa de refresco el monitor."
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 15.0
margin/top = 135.0
margin/right = 15.0
margin/bottom = 160.0
custom_fonts/font = ExtResource( 14 )
toggle_mode = true
is_pressed = true
enabled_focus_mode = 2
shortcut = null
text = "Sincronización Vertical (VSync)"
flat = false
align = 0

[node name="Info" type="RichTextLabel" parent="referencia/PopUps/Rendimiento/Panel"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 15.0
margin/top = 171.0
margin/right = 15.0
margin/bottom = 5.0
bbcode/enabled = true
bbcode/bbcode = ""
visible_characters = -1
percent_visible = 1.0

[node name="LabelTasa" type="Label" parent="referencia/PopUps/Rendimiento/Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 21.0
margin/top = 59.0
margin/right = 109.0
margin/bottom = 73.0
custom_fonts/font = ExtResource( 14 )
text = "Tasa objetivo:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CheckMax" type="CheckBox" parent="referencia/PopUps/Rendimiento/Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 319.0
margin/top = 76.0
margin/right = 371.0
margin/bottom = 99.0
custom_icons/checked = ExtResource( 19 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Max"
flat = false
align = 0

[connection signal="pressed" from="referencia/PanelMenu/HBoxContainer/Presentacion" to="referencia/PanelMenu/HBoxContainer/Programa" method="_on_Presentacion_pressed"]

[connection signal="meta_clicked" from="referencia/PopUps/AcercaDe/Info/Titulo" to="referencia/PopUps/AcercaDe" method="_on_Titulo_meta_clicked"]


